<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.jerry.simplespeedometer.FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:keepScreenOn="true"
                android:text="@string/speed"
                android:textColor="#ffffff"
                android:textSize="130sp"
                android:textStyle="bold" />

            <!-- android:textColor="#33b5e5" -->

            <TextView
                android:id="@+id/speed_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/speedunit"
                android:textColor="#ffffff"
                android:textSize="45sp"
                android:textStyle="bold" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
            
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:orientation="vertical">
	
		            <TextView
		                android:id="@+id/top_speed_text"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="30dp"
		                android:gravity="center_horizontal"
		                android:text="@string/topspeed_text"
		                android:textColor="#ffffff"
		                android:textSize="22sp"
		                android:textStyle="bold" />
		
		            <TextView
		                android:id="@+id/top_speed"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:gravity="center_horizontal"
		                android:text="@string/topspeed"
		                android:textColor="#ffffff"
		                android:textSize="20sp" />
	            </LinearLayout>
	            
	            
	            <FrameLayout
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:paddingLeft="20dp"
					    android:background="#ff000000" >
				    
				    <ImageView
				        android:id="@+id/compass_base"
				        android:layout_width="wrap_content"
				        android:layout_height="match_parent"
				        android:layout_gravity="center"
				        android:layout_marginTop="10dp"
				        android:contentDescription="@string/compass_base"
				        android:src="@drawable/compass_base" />
			
				    <ImageView
				        android:id="@+id/compass_arrow"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:src="@drawable/compass_arrow"
				        android:layout_marginTop="10dp"
				        android:contentDescription="@string/compass_arrow"
				        android:layout_gravity="center"/>
					</FrameLayout>
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

    

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <!-- Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" -->
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
